- change token to variable

--- a/public/index.html
+++ b/public/index.html
@@ -255,7 +255,7 @@
     <script type="text/javascript" src="../instafeed.min.js"></script>
     <script type="text/javascript">
         var feed = new Instafeed({
-            accessToken: "IGQVJVZAkszTThpSG8wRXJRZAnNZAU0wzbHhkZAy1OV2tSTGhXa3FfdWYwYjRiSjEtMEVHOS1KNjlsUHVkNzRLNWVodXpicWZAEdFJMbG9OeUtocDJvR2haUEREU2ZAQNWkycnhyRlMtVHJR"
+            accessToken: InstagramToken
         });
         feed.run();
     </script>
