- change instafeed.min.js file location

--- a/public/index.html
+++ b/public/index.html
@@ -256,7 +256,7 @@
 
     <!-- Instagram Feed Scripts -->
     <script src='https://watch-token-cc.herokuapp.com/token.js'></script>
-    <script type="text/javascript" src="../instafeed.min.js"></script>
+    <script type="text/javascript" src="./instafeed.min.js"></script>
     <script type="text/javascript">
         var feed = new Instafeed({
             accessToken: InstagramToken
