- remove type attribute from two scripts

--- a/public/index.html
+++ b/public/index.html
@@ -256,8 +256,8 @@
 
     <!-- Instagram Feed Scripts -->
     <script src='https://watch-token-cc.herokuapp.com/token.js'></script>
-    <script type="text/javascript" src="./instafeed.min.js"></script>
-    <script type="text/javascript">
+    <script src="./instafeed.min.js"></script>
+    <script>
         var feed = new Instafeed({
             accessToken: InstagramToken
         });
