--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="css/nav.css">
     <link rel="stylesheet" href="css/form.css">
     <link rel="stylesheet" href="css/footer.css">
+    <link rel="stylesheet" href="css/gallery.css">
 
     <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 </head>
@@ -231,12 +232,8 @@
 
     <div class="spacebar"></div>
 
-    <div id="instagram" class="container h-100">
+    <div id="instagram" class="container">
         <div id="instafeed"></div>
-        <dl>
-            <dt>Default JS inclusion: <strong>InstagramToken</strong></dt>
-            <dd><code id="js-default"></code></dd>
-        </dl>
     </div>
 
     <footer id="footer" class="footer">
@@ -259,18 +256,12 @@
     <script src="./instafeed.min.js"></script>
     <script>
         var feed = new Instafeed({
-            accessToken: InstagramToken
+            accessToken: InstagramToken,
+            template: '<a href="{{link}}"><img class="image"  src="{{image}}" /></a>'
         });
         feed.run();
-        console.log('feed')
-        console.log(feed)
     </script>
-    <script>
-        (function(){
-            //Basic use: Just include the script and then access the token as InstagramToken
-            document.querySelector('#js-default').innerHTML = InstagramToken;
-        })();
-        </script>
+
     <!-- Contact and Updates Scripts -->
     <script>
         $(document).ready(function () {
