--- a/watch/public/index.html
+++ b/watch/public/index.html
@@ -15,6 +15,7 @@
     <!-- Our CSS -->
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/nav.css">
+    <link rel="stylesheet" href="css/hero.css">
     <link rel="stylesheet" href="css/form.css">
     <link rel="stylesheet" href="css/footer.css">
 
@@ -25,99 +26,159 @@
 
     <nav class="navbar navbar-expand-lg fixed-top navbar-light shadow-sm">
 
-        <button class="navbar-toggler custom-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler">
-            <span class="navbar-toggler-icon"></span>
-        </button> <!-- Navbar Toggler Mobile -->
-
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand mr-auto" href="#">
             <img src="assets/clock_white.png" width="50" height="50">
         </a> <!-- Navbar Brand -->
 
+        <button class="navbar-toggler ml-auto custom-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler">
+            <span class="navbar-toggler-icon"></span>
+        </button> <!-- Navbar Toggler Mobile -->
+
         <div class="collapse navbar-collapse justify-content-end" id="navbarToggler">
             <ul class="navbar-nav ">
-                <li class="nav-item active"><a class="nav-link nav-active" href="#hero"> Home </a></li>
-                <li class="nav-item"><a class="nav-link" href="#video"> About </a></li>
-                <li class="nav-item"><a class="nav-link" href="#how_it_works"> How It Works </a></li>
+                <li class="nav-item"><a class="nav-link" href="#hero"> Home </a></li>
+                <li class="nav-item"><a class="nav-link" href="#services"> Watch Repair </a></li>
+                <li class="nav-item"><a class="nav-link" href="#video"> How It Works </a></li>
+                <li class="nav-item"><a class="nav-link" href="#calendly"> Book Appointment </a></li>
+                <li class="nav-item"><a class="nav-link" href="#about"> About </a></li>
+                <li class="nav-item"><a class="nav-link" href="https://thedialedinwatchmaker.com/blog-2/"> Blog </a></li>
                 <li class="nav-item"><a class="nav-link" href="#contact"> Contact Me </a></li>
-                <li class="nav-item"><a class="nav-link" href="learn_more.html"> Learn More </a></li>
-                <li class="nav-item"><a class="nav-link" href="#"> Shop </a></li>
+                <!-- <li class="nav-item"><a class="nav-link" href="learn_more.html"> Learn More </a></li> -->
             </ul>
         </div> <!-- Navbar Nav -->
 
     </nav> <!-- Navigation -->
 
-    <div id="hero" class="container">
+    <div id="hero" class="container-fluid">
         <div class="row">
 
-            <div class="col-sm-6">
-                <img id="hero_img" src="assets/clock_white.png">
+            <div id="hero_left" class="col-md-6">
+                <img id="desktop_hero_image" src="assets/half_clock.png">
+                <img id="mobile_hero_image" src="assets/clock_white.png">
             </div> <!-- Hero Clock -->
 
-            <div class="col-sm-6 align-self-center">
-                <h1> The<br>Dialed In<br>Watchmaker </h1>
+            <div id="hero_right" class="col col-md-5  align-self-center">
+                <h1> 
+                    The<br> 
+                    Dialed In<br>
+                    Watchmaker 
+                </h1>
+                <h4>Vancouver's very own "Virtual Watchmaker"</h4>
+                <br>
                 <p>
-                    Vancouver’s very own “Virtual Watchmaker”.
                     Thank you for stopping by!
                     This website is here to provide an interactive space that people can reach out to me and talk openly
                     about their watches and specific repair needs. I aim to drop the mystery around watchmaking and show you
                     the magic that is horology.
                 </p>
-                <p>WELCOME!<br>Click on the video below and see how it works.</p>
-                <img id="hero_arrow" src="assets/arrow.png">
+                <a href="#services"><img id="hero_arrow" src="assets/arrow.png"></a>
             </div> <!-- Hero Text -->
 
         </div> <!-- Row -->
     </div> <!-- Hero -->
 
-    <div class="spacebar"></div>
+    <div id="services" class="container">
+
+        <div class="spacebar"></div> <!-- Need this for Navigation -->
+
+        <h2> Every watch has a story, and quality repair depends on how well you can listen... </h2>
+        <h4> Here is a list of some of the more common options for repairs and services that I offer. </h4>
+
+        <div class="spacebar"></div>
+
+        <div class="row">
+
+            <div class="col-md-4 mb-4">
+                <div class="card">
+                    <img class="card-img-top" src="assets/battery.jpg">
+                    <div class="card-body">
+                        <h5 class="card-title">Battery, crystals and bracelet adjustments</h5>
+                        <p class="card-text">
+                            If you think your watch just needs a new battery bracelet adjustment or a new crystal, no problem. 
+                            I only use high quality swiss made Renata cells.
+                        </p>
+                    </div>
+                </div>
+            </div> <!-- Col -->
+
+            <div class="col-md-4 mb-4">
+                <div class="card">
+                    <img class="card-img-top" src="assets/movement.jpg">
+                    <div class="card-body">
+                        <h5 class="card-title">Movement Replacement</h5>
+                        <p class="card-text">
+                            If the new battery doesn’t take, chances are you may need a replacement movement.
+                        </p>
+                    </div>
+                </div>
+            </div> <!-- Col -->
+
+            <div class="col-md-4">
+                <div class="card">
+                    <img class="card-img-top" src="assets/full_service.jpg">
+                    <div class="card-body">
+                        <h5 class="card-title">Full Service Work</h5>
+                        <p class="card-text">
+                            This is the nitty gritty. Mechanical watches need tune ups just like cars. 
+                            It may be time for your valued timepiece to get that timely check up 
+                            and overhaul to keep it running properly for years to come.
+                        </p>
+                    </div>
+                </div> 
+            </div> <!-- Col -->
+
+        </div> <!-- Row -->
+
+    </div> <!-- Services -->
 
     <div id="video" class="container">
+        <div class="spacebar"></div>
         <div class="embed-responsive embed-responsive-16by9">
             <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/K6l4xdGAY9w" allowfullscreen></iframe>
         </div>
     </div> <!-- Video -->
 
-    <div class="spacebar"></div>
-
     <div id="how_it_works" class="container">
+        <div class="spacebar"></div>
+
         <div class="row">
 
             <div class="col-sm-6 align-self-center">
-                <img class="image" src="assets/watch-components.jpg">
+                <img src="assets/clock_white.png">
             </div> <!-- Hero Clock -->
 
-            <div class="col-sm-6 align-self-center">
-                <h2> 1. Book an appointment </h2>
+            <div class="col-sm-6">
+                <h3> 1. Book an appointment </h3>
                 <p>
                     Click on the Contact page, press “Check my availability” and select a time that works for both of us. Or
                     send me a message with details describing the issues you’re having with your watch.
                 </p>
                 <br>
-                <h2> 2. Virtual appointment </h2>
+                <h3> 2. Virtual appointment </h3>
                 <p>
                     At the time of the appointment, I’ll email you the invitation for the Google Meet link. From there, we
                     can discuss the issues you may be having with your watch. Easy right?
                 </p>
                 <br>
-                <h2> 3. Send me your watch: </h2>
+                <h3> 3. Send me your watch: </h3>
                 <p>
                     If we decide that your watch needs a comprehensive estimate, we can then arrange a pick up or a time to
                     meet so that I may have a closer look.
                 </p>
                 <br>
-                <h2> 4. Estimate: </h2>
+                <h3> 4. Estimate: </h3>
                 <p>
                     Once I’ve completed the estimate, I will send you a detailed work order with all necessary repairs as
                     well as a timeline for completion..
                 </p>
                 <br>
-                <h2> 5. Go Ahead: </h2>
+                <h3> 5. Go Ahead: </h3>
                 <p>
                     As soon as you give the go ahead, I will start the repair process. I’ll send you updates on the progress
                     until the job is completed.
                 </p>
                 <br>
-                <h2> 6. Finished: </h2>
+                <h3> 6. Finished: </h3>
                 <p>
                     Your watch is now ready to face the world again. I’ll contact you with the good news and once I’ve
                     received payment, we can then arrange the process for returning the watch to you.
@@ -128,13 +189,29 @@
         </div> <!-- Row -->
     </div> <!-- How It Works -->
 
-    <div class="spacebar"></div>
+    <div id="calendly" class="container">
+        <div class="spacebar"></div>
 
+        <div class="row">
 
+            <div class="col-md-6">
+                <h3> Book an Appointment! </h3>
+            </div>
 
-    <div class="spacebar"></div>
+            <div class="col-md-6">
+                <!-- Calendly link widget begin -->
+                <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
+                <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript"></script>
+                <button class="btn btn-action" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/chestercervantes/watchmaker-1-hour-session'});return false;">Schedule time with me</button>
+                <!-- Calendly link widget end -->
+            </div>
+
+        </div> <!-- Row -->
+    </div> <!-- Calnedly -->
 
     <div id="contact" class="container">
+        <div class="spacebar"></div>
+
         <div class="row">
             <div class="col-sm-6">
                 <h2>Latest Updates</h2>
@@ -142,15 +219,10 @@
                 <div class="twitter-component" id="latest-tweet-1">No more tweets available</div>
                 <div class="twitter-component" id="latest-tweet-2">No more tweets available</div>
                 <div class="twitter-component" id="latest-tweet-3">No more tweets available</div>
-
-<!--                            <form id="tweet-form">-->
-<!--                                <button type="submit" class="btn btn-action" id="btn-tweets">Update Tweet</button>-->
-<!--                                <label for="response-tweets"></label>-->
-<!--                                <input type="hidden" id="response-tweets" name="response-tweets" readonly>-->
-<!--                                &lt;!&ndash;                <input type="hidden" id="test-tweets" name="test-tweets" readonly>&ndash;&gt;-->
-<!--                            </form>-->
             </div> <!-- Latest Updates -->
+
             <div class="spacebar"></div>
+
             <div class="col-sm-6">
                 <h2>Send a Message!</h2>
                 <br>
@@ -172,39 +244,14 @@
                     <input type="hidden" id="response-contact" name="response-contact" readonly>
                 </form>
             </div> <!-- Email form -->
-        </div>
+
+        </div> <!-- Row -->
     </div> <!-- Contact -->
 
-    <div class="spacebar"></div>
-
-    <div id="calendly" class="container">
-        <div class="row">
-            <div class="col">
-                <h2> Book an Appointment! </h2>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col">
-                <!-- Calendly link widget begin -->
-                <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
-                <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript"></script>
-                <button class="btn btn-action" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/chestercervantes/watchmaker-1-hour-session'});return false;">Schedule time with me</button>
-                <!-- Calendly link widget end -->
-            </div>
-        </div>
-    </div>
-
-    <div class="spacebar"></div>
-
-    <div id="subscription" class="container h-100">
-        <div class="row align-items-center h-100">
-            <div class="col-8 mx-auto">
-<!--                <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">-->
-                <!--<style type="text/css">
-                        #mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
-                    Add your own Mailchimp form style overrides in your site stylesheet or in this style block.
-                        We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. 
-                    </style> -->
+    <div id="subscription" class="container">
+        <div class="spacebar"></div>
+        <div class="row align-items-center">
+            <div class="col-md-8 mx-auto">
                 <div id="mc_embed_signup">
                     <form action="https://gmail.us2.list-manage.com/subscribe/post?u=28eaead70afd479bbb401771e&amp;id=f6a6f17b24" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
                         <div id="mc_embed_signup_scroll">
@@ -217,29 +264,36 @@
                                 <div class="response" id="mce-error-response" style="display:none"></div>
                                 <div class="response" id="mce-success-response" style="display:none"></div>
                             </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-                                <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_28eaead70afd479bbb401771e_f6a6f17b24" tabindex="-1" value=""></div>
-                                <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button btn btn-action"></div>
+                            <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_28eaead70afd479bbb401771e_f6a6f17b24" tabindex="-1" value=""></div>
+                            <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button btn btn-action"></div>
                         </div>
                     </form>
                 </div>
-            <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';fnames[3]='ADDRESS';ftypes[3]='address';fnames[4]='PHONE';ftypes[4]='phone';fnames[5]='BIRTHDAY';ftypes[5]='birthday';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
-            <!--End mc_embed_signup-->
+                <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script>
+                <script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';fnames[3]='ADDRESS';ftypes[3]='address';fnames[4]='PHONE';ftypes[4]='phone';fnames[5]='BIRTHDAY';ftypes[5]='birthday';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
+                <!--End mc_embed_signup-->
+            </div>
+        </div> <!-- Row -->
+        <div class="spacebar"></div>
+    </div> <!-- subscription -->
+
+    <footer id="footer">
+        <div class="container">
+            <br>
+            <div class="row d-flex justify-content-center">
+                <a href="#"><img class="footer-sm" src="assets/socialMedia/facebook.png"></a>
+                <a href="#"><img class="footer-sm" src="assets/socialMedia/instagram.png"></a>
+                <a href="#"><img class="footer-sm" src="assets/socialMedia/twitter.png"></a>
+                <a href="#"><img class="footer-sm" src="assets/socialMedia/youtube.png"></a>
+            </div>
+            <br>
+            <div class="row d-flex justify-content-center">
+                <p> Beaumont Studios. 326 West 5 ave, Vancouver </p>
+                &nbsp; | &nbsp;
+                <p> 514-688-5100 </p>
             </div>
         </div>
-    </div>
-
-
-    <div class="spacebar"></div>
-
-    <footer id="footer" class="footer">
-        <div class="container d-flex justify-content-center">
-            <a href="#"><img class="footer-sm" src="assets/socialMedia/facebook.png"></a>
-            <a href="#"><img class="footer-sm" src="assets/socialMedia/instagram.png"></a>
-            <a href="#"><img class="footer-sm" src="assets/socialMedia/twitter.png"></a>
-            <a href="#"><img class="footer-sm" src="assets/socialMedia/youtube.png"></a>
-        </div>
-    </footer>
-    <!-- Footer -->
+    </footer> <!-- Footer -->
 
     <!-- Bootstrap Scripts -->
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
