- change sendmail service email and new tab opens when youtube link

--- a/public/index.html
+++ b/public/index.html
@@ -43,7 +43,7 @@
                 <li class="nav-item"><a class="nav-link" href="#appointment"> Book Appointment </a></li>
                 <li class="nav-item"><a class="nav-link" href="#contact"> Contact Me </a></li>
                 <li class="nav-item"><a class="nav-link" href="#about"> About Me </a></li>
-                <li class="nav-item"><a class="nav-link" href="https://thedialedinwatchmaker.com/blog-2/"> Blog </a></li>
+                <li class="nav-item"><a class="nav-link" href="https://thedialedinwatchmaker.com/blog-2/" target="_blank"> Blog </a></li>
             </ul>
         </div> <!-- Navbar Nav -->
 
