--- a/public/index.html
+++ b/public/index.html
@@ -43,7 +43,7 @@
                 <li class="nav-item"><a class="nav-link" href="#appointment"> Book Appointment </a></li>
                 <li class="nav-item"><a class="nav-link" href="#contact"> Contact Me </a></li>
                 <li class="nav-item"><a class="nav-link" href="#about"> About Me </a></li>
-                <li class="nav-item"><a class="nav-link" href="https://thedialedinwatchmaker.com/blog-2/" target="_blank"> Blog </a></li>
+                <li class="nav-item"><a class="nav-link" href="https://thedialedinwatchmaker.com/blog-2/"> Blog </a></li>
             </ul>
         </div> <!-- Navbar Nav -->
 
@@ -158,9 +158,12 @@
             <br> 
 
             <div class="row d-flex justify-content-center">
+                <!-- Calendly link widget begin -->
                 <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
                 <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript"></script>
-                <a class="button button-black" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/chestercervantes/watchmaker-1-hour-session'});return false;">Schedule time with me</a>
+                <a class="button button-black" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/thedialedinwatchmaker/15min'});return false;">Schedule time with me</a>
+                <!-- Calendly link widget end -->
+
             </div> <!-- Calendly -->
 
         </div> <!-- container -->
@@ -295,8 +298,10 @@
 
         <div class="row align-items-center">
             <div class="col-md-8 mx-auto">
+                <!-- Begin Mailchimp Signup Form -->
+
                 <div id="mc_embed_signup">
-                    <form action="https://gmail.us2.list-manage.com/subscribe/post?u=28eaead70afd479bbb401771e&amp;id=f6a6f17b24" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+                    <form action="https://thedialedinwatchmaker.us2.list-manage.com/subscribe/post?u=51d98407deb555955be46ca4d&amp;id=98eab27d33" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
                         <div id="mc_embed_signup_scroll">
                             <h3>Subscribe to our Mailing List</h3>
                             <div class="form-group">
@@ -307,13 +312,12 @@
                                 <div class="response" id="mce-error-response" style="display:none"></div>
                                 <div class="response" id="mce-success-response" style="display:none"></div>
                             </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-                            <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_28eaead70afd479bbb401771e_f6a6f17b24" tabindex="-1" value=""></div>
+                            <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_51d98407deb555955be46ca4d_98eab27d33" tabindex="-1" value=""></div>
                             <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button btn btn-action"></div>
                         </div>
                     </form>
                 </div>
-                <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script>
-                <script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';fnames[3]='ADDRESS';ftypes[3]='address';fnames[4]='PHONE';ftypes[4]='phone';fnames[5]='BIRTHDAY';ftypes[5]='birthday';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
+                <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';fnames[3]='ADDRESS';ftypes[3]='address';fnames[4]='PHONE';ftypes[4]='phone';fnames[5]='BIRTHDAY';ftypes[5]='birthday';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
                 <!--End mc_embed_signup-->
             </div>
         </div> <!-- Row -->
@@ -413,7 +417,7 @@
     </script>
 
     <!-- Instagram Feed Scripts -->
-    <script src='https://watch-token-cc.herokuapp.com/token.js'></script>
+    <script src='https://watchmakertokenagent.herokuapp.com/token.js'></script>
     <script src="scripts/instafeed.min.js"></script>
     <script>
         var feed = new Instafeed({
