--- a/public/index.html
+++ b/public/index.html
@@ -296,7 +296,7 @@
                 <div id="mc_embed_signup">
                     <form action="https://gmail.us2.list-manage.com/subscribe/post?u=28eaead70afd479bbb401771e&amp;id=f6a6f17b24" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
                         <div id="mc_embed_signup_scroll">
-                            <h3>Subscribe to our Mailing List</h3>
+                            <h3>Subscribe to my Mailing List</h3>
                             <div class="form-group">
                                 <label for="mce-EMAIL">Email Address</label>
                                 <input type="email" value="" name="EMAIL" class="required email form-control" id="mce-EMAIL">
