--- a/public/index.html
+++ b/public/index.html
@@ -327,10 +327,10 @@
     <footer id="footer" class="container-fluid">
         <br>
         <div class="row d-flex justify-content-center">
-            <a href="#"><img class="footer-sm" src="assets/socialMedia/facebook.png"></a>
-            <a href="#"><img class="footer-sm" src="assets/socialMedia/instagram.png"></a>
-            <a href="#"><img class="footer-sm" src="assets/socialMedia/twitter.png"></a>
-            <a href="#"><img class="footer-sm" src="assets/socialMedia/youtube.png"></a>
+            <a href="https://www.facebook.com/thedialedinwatchmaker/"><img class="footer-sm" src="assets/socialMedia/facebook.png"></a>
+            <a href="https://www.instagram.com/the_dialed_in_watchmaker/"><img class="footer-sm" src="assets/socialMedia/instagram.png"></a>
+            <a href="https://twitter.com/horologisthowie"><img class="footer-sm" src="assets/socialMedia/twitter.png"></a>
+            <a href="https://www.youtube.com/channel/UCsImGXrn4YaVj9B5Uz9yDgw"><img class="footer-sm" src="assets/socialMedia/youtube.png"></a>
         </div>
         <br>
         <div class="row d-flex justify-content-center">
